Fixed issue where gym finder page wasnt full page height on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,6 +225,7 @@ section.map-section {
     position: relative;
     top: 6rem;
     margin: 0;
+    min-height: 100vh
 }
 
 div.search-box {
@@ -248,6 +249,15 @@ div.search-box h2 {
     font-weight: 600;
     font-family: 'Raleway', sans-serif;
 }
+
+
+.search-box .justify-content-between h3 {
+        padding: 0;
+        color: #F39237;
+        text-decoration: underline;
+        font-size: 1.4rem;
+        cursor: pointer;
+    }
 
 div#information-box {
     display: none;
@@ -348,7 +358,7 @@ select#country option {
 
 .gym-info-icon {
     color: #F39237;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     margin-right: 1rem;
     float:left;
 }
@@ -363,7 +373,7 @@ select#country option {
 
 .location-rating {
     padding: 0;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -383,7 +393,7 @@ div.information-box-bottom-row div.col {
 }
 
 .location-address, .location-website {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
 }
 
 input#address-input {
@@ -512,6 +522,7 @@ footer p {
         top:0;
         height:100%;
         max-height:100%;
+        min-height: 50vh;
     }
 
     div.search-box {
@@ -532,6 +543,7 @@ footer p {
 
     .location-image {
         margin: 0;
+        max-height: 20vh;
     }
 
     div.search-box div {
@@ -547,13 +559,6 @@ footer p {
         max-width: 50rem;
     }
 
-    .search-box .justify-content-between h3 {
-        padding: 0;
-        color: #F39237;
-        text-decoration: underline;
-        font-size: 1.4rem;
-        cursor: pointer;
-    }
     hr {
         margin-top: 4rem;
         border-bottom: .4rem solid #F39237;
